z-index fix

--- a/style.css
+++ b/style.css
@@ -6,6 +6,8 @@
   box-sizing: border-box;
   font-family: 'Montserrat', sans-serif;
   font-size: 18px;
+  text-shadow: 1px 1px 1px black;
+  
 }
 
 .topnav {
@@ -15,6 +17,7 @@
   top: 0;
   width: 100%;
   z-index: 9999;
+  
 }
 
 .topnav a {
@@ -93,6 +96,7 @@
   height: 100vh;
   background-blend-mode: screen;
   background-image: radial-gradient(ellipse at 86% 44%, rgba(82, 26, 26, 70) 0%, rgba(165, 176, 84, 0) 90%), radial-gradient(ellipse at 57% 59%, rgba(142, 42, 216, 0.1) 0%, rgba(142, 42, 216, 0) 60%), radial-gradient(circle at 16% 17%, rgba(97, 149, 111, 0.2) 0%, rgba(97, 149, 111, 0) 40%), radial-gradient(farthest-side at 45% 3%, rgba(246, 43, 171, 0.2) 0%, rgba(0, 0, 0, 0) 100%);
+  
 }
 
 .speech {
@@ -261,21 +265,26 @@
 }
 
 /* -------------------SKILLS------------------- */
+
+.skills-bg {
+  background-position:  center;
+  background-size:cover;
+  background-repeat: no-repeat;
+  background-image: url(./images/white7.jpg);
+  box-shadow: inset 0 0 15px 5px rgba(0,0,0,0.75);
+
+}
+
 .skill-title {
   text-align: center;
-  margin-top: 5vh;
   font-size: 1.6em;
   text-transform: uppercase;
   line-height: 1;
   text-align: center;
-  background: linear-gradient(90deg, rgb(97, 36, 64) 0%, rgb(122, 24, 24) 20%, rgb(190, 15, 15) 39%, rgb(156, 47, 47) 50%, rgb(168, 85, 30) 60%, rgb(107, 93, 93) 80%, rgb(0, 0, 0) 100%);
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
-  animation: shine 3s infinite;
+  color:black;
   background-size: 200%;
   background-position: left;
 }
-
 
 .skills {
   display: flex;
@@ -284,6 +293,11 @@
   text-align: center;
   flex-wrap: wrap;
   gap: 50px;
+  
+}
+
+.skills img {
+  height: auto;
 }
 
 .cards1 {
@@ -296,13 +310,21 @@
   padding: 50px;
   gap: 10px;
 }
-
+.cards1 h1 {
+  background-color: rgb(255, 255, 255);
+  color: black;
+  border-radius: 10%;
+  padding: 5px;
+}
 .cards1 h3 {
-  color: rgb(167, 69, 69);
+  color: rgb(255, 255, 255);
   animation: shine 3s infinite;
-  background: linear-gradient(90deg, rgb(97, 36, 64) 0%, rgb(122, 24, 24) 20%, rgb(190, 15, 15) 39%, rgb(156, 47, 47) 50%, rgb(168, 85, 30) 60%, rgb(107, 93, 93) 80%, rgb(0, 0, 0) 100%);
+  background-color: black;
+  border-radius: 5%;
+  padding:5px;
+  /* background: linear-gradient(90deg, rgb(97, 36, 64) 0%, rgb(122, 24, 24) 20%, rgb(190, 15, 15) 39%, rgb(156, 47, 47) 50%, rgb(168, 85, 30) 60%, rgb(107, 93, 93) 80%, rgb(0, 0, 0) 100%);
   -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
+  -webkit-text-fill-color: transparent; */
   animation: shine 3s infinite;
   background-size: 200%;
   background-position: left;
@@ -337,11 +359,13 @@
 .linus img {
   margin: auto;
   width: 100%;
+  background-color: black;
   height: auto;
   min-height: 50vh;
   object-fit: cover;
   -webkit-animation: kenburns-center 5s ease-out both;
   animation: kenburns-center 5s ease-out both;
+  box-shadow: inset 0 0 15px 5px rgba(0,0,0,0.75);
 }
 
 @keyframes kenburns-center {
@@ -371,6 +395,19 @@
   align-items: center;
   text-align: center;
   background-color: rgb(255, 255, 255);
+  background-image: url(./images/white5.jpg.png);
+  background-repeat: no-repeat;
+  height: auto;
+  background-size: cover;
+  box-shadow: inset 0 0 15px 5px rgba(0,0,0,0.75);
+
+}
+
+.Proyectos img {
+  
+  background-size: cover;
+  background-repeat: no-repeat;
+  height: auto;
 }
 
 .cards {
@@ -414,6 +451,7 @@ footer {
   height: 35vh;
   padding: 30px;
   background: rgb(95, 41, 52);
+  box-shadow: inset 0 0 15px 5px rgba(0,0,0,0.75);
 }
 
 footer h3 {
